 * Removed redundant indexer control code
 * Modified Status/Admin plugins to use Index::Daemon

2008-08-14 tdb
 * Generate new thumbnails in JPEG format

2008-08-15 tdb
 * Use an absolute URL for document icons (will complain under HTTPS)

2008-08-20 tdb
 * input_rows is specific to certain field types

2008-09-08 cjg
 * added srand to improve randomness of login cookies.

2008-09-10 cjg
 * Tweaked search so that a search with the only parameter being screen=
    still counts as not-filled-in rather than defaulting to action=search.
    Fixing #3431
 * Made change to Sword deposit to handle a change in the way CGI.pm > 3.15
    does post data. Fixing #3430
 * Fixed issue with view-by-name not making the actual names appear on the 
    menu page. This was due to it ending up looking up HASH(0x£@*&£$) in 
    the sizes hash.

2008-09-10 tdb
 * Thumbnails are now created as separate documents
 * Document conversions now add relations between converted documents
 * Removed "bucket" classes in the storage layer
 * XML revision files now belong to the History event, not the EPrint
 * Added relation API methods to DataObj for manipulating object relations
 * Added EPrints::Utils::make_relation method to generate a URI relation
    from a simple term
 * Added "files" field to EPrint (for accessing contained files)

2008-09-12 tdb
 * Force DBI::primary_key call to be in list context

2008-09-12 tdb
 * indexcodes are now stored in a document
 * Plugin::Convert::can_convert() now takes an optional "mime-type" argument
 * Plugin::Convert::convert() may return more than one document
 * Fixes for Plugin::Convert::Unpack [zip]
 * Removed bucket usage from remaining conversion plugins
 * Added IndexCodes conversion plugin to generate index codes froma document

2008-09-15 tdb
 * Added get_primary_key() for MySQL by using DESCRIBE
 * Further fix for linking creators to browse views

2008-09-25 tdb
 * Reduced the memory requirement of in-memory phrases (3MB in testing)
